<resources>
    <string name="app_name">Login</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user">User</string>
    <string name="login_text">Hee welkom bij two brains, je moet eerst inloggen</string>
    <string name="username_text">Gebruikersnaam:</string>
    <string name="password_text">Password:</string>
    <string name="Attempt">Attempts :</string>
    <string name="Button_login">Login</string>
    <string name="Screen_text_page2">WELKOM bij project two brains, die plek voor het vinden van een studie partner</string>
    <string name="btn_uitloggen">Uitloggen</string>
    <string name="title_activity_voorkeuren">voorkeuren</string>
    <string name="button_account">Account-instellingen</string>
    <string name="Button_voorkeuren">Voorkeuren</string>
    <string name="Button_zoek">Zoek student!</string>
    <string name="Button_resultaten">Resultaten</string>
    <string name="title_activity_zoek">zoek</string>
    <string name="title_activity_resultaten">resultaten</string>
    <string name="title_activity_instellingen">instellingen</string>

</resources>
